@@ -1,5 +1,9 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+
+== 06/25/2014 ==
+Kayen: Updated SE_Hate (Renamed from SE_Hate2) to now properly work for instant +/- hate spells.
+
 == 06/17/2014 ==
 Kayen: Implemented SE_AStacker, SE_BStacker, SE_CStacker, SE_DStacker.
 These effects when present in buffs prevent each other from stacking, 
